[pom] Drop jdk attach allow attch self
was for jmockit, but jmockit requires agent since long time ago.  Its usage of attach self was wrong and thus this is unnecessary